fix navbar overlap

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -127,7 +127,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    transform: translate(25%, 50%);
+    transform: translate(8%, 50%);
   }
 
   .menu-icon {
